--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "feedonomics/webhook-sdk",
+    "name": "feedonomics/shopify-orders-connector",
     "description": "SDK for connecting to FeedAMP",
     "version": "0.1.0",
     "type" : "sdk",
     "autoload": {
         "psr-4": {
-            "FeedonomicsWebHookSDK\\": [
+            "ShopifyOrdersConnector\\": [
                 "src/"
             ]
         }
